package dev.well.bmsbackendddd.domain.valueobject;

import dev.well.bmsbackendddd.ddd.ValueObject;

public enum BirdStatus implements ValueObject {
    ACTIVE,
    INACTIVE
}
